--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.7",
+    "uuidv4": "^6.0.8",
     "yup": "^0.28.5"
   },
   "devDependencies": {
